fixed image responsiveness on mobile

--- a/src/scss/components/_components.post.scss
+++ b/src/scss/components/_components.post.scss
@@ -71,6 +71,11 @@
     margin: 50px 0 30px 0%;
     height: auto;
     position: relative;
+
+    @include breakpoint(xs) {
+        max-width: 120%;
+        margin: 0 0 0 -10%;
+    }
 }
 
 .markdown .image-caption {
